VDR Plugin 'ttxtsubs' Revision History
--------------------------------------

201x-xx-xx: Version x.x.x
- Removed Live Delay and Record Subtitles setup options (unused since 0.2.0).

2011-10-08: Version 0.2.4
- Updated patch for VDR 1.7.21 (Closes #745)

  !!! With this release the channels.conf format has changed !!!
  !!! You may need to manually update your channels.conf     !!!

  With VDR 1.7.21 the subtitle PIDs are stored in the channels.conf as an
  extension to the teletext PID (see vdr.5 for details).

  This change made it neccessary to change the extension of the tpid in
  channels.conf used by the ttxtsubs patch:

  old: ...:201;150=deu,151=fin:...
  new  ...:201+150=deu,151=fin;2001,2002:...

  ...where 201 is the TPID, 150 and 151 are the teletext pages for the
  German and Finnish teletext subtitles and 2001,2002 are the DVB
  subtitle PIDs.

2011-08-21: Version 0.2.3
- Made changes in font settings be applied instantly, without the need to
  change the channel (patch provided by Rolf Ahrenberg)
- Converted *.po to UTF-8
- Updated patch for VDR 1.7.20 (Closes #689)
- Don't log all page info received from VDR (Closes #331)
- Show subtitles with backround rectangle, if outline width is < 2
  (patch provided by Mike Lampard) (Closes #247)

2010-05-08: Version 0.2.2
- Fixed channel retune triggering in VDR patch and updated patch to 1.7.14
  (Dropped 1.7.12 and 1.7.13 patch)
- Got rid of the backround thread
- Fixed live TV subtitles on FF cards, where there is no transfer mode
- Updated README and TROUBLESHOOTING (Closes #323)
- Increased internal frame buffer and log buffer overflows (Closes #295)

2010-03-06: Version 0.2.1
- Added Estonian translation by Arthur Konovalov (Closes #271)
- Finnish translation updated by Rolf Ahrenberg
- Trigger OSD update when an empty page is sent (making the previous subtitle
  disappear) (Closes #275)
- French translation updated by Michaël Nival (Closes #278)
- Makefile adjustments for VDR 1.7.13.