@@ -2,7 +2,8 @@ VDR Plugin 'ttxtsubs' Revision History
 --------------------------------------
 
 201x-xx-xx: Version x.x.x
-- Removed Live Delay and Record Subtitles setup options (unused since 0.2.0).
+- Removed obsolete (unused since 0.2.0) setup options: Live Delay,
+  Record Subtitles, and Workaround for some French chns.
 
 2011-10-08: Version 0.2.4
 - Updated patch for VDR 1.7.21 (Closes #745)
